objects/Community_Info__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This settings is to store dynamic values used for community user creation by automated process.</description>
    <fields>
        <fullName>Community_Label__c</fullName>
        <description>Name of the MindCrowd community.</description>
        <label>Community Label</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Games_Reactivation_Days__c</fullName>
        <description>It is used to set the number of days in which games can be reactivated.</description>
        <label>Games Reactivation Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Log_Exception__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If this check box is checked only then exception will log in Exception_Log__c else not.</description>
        <inlineHelpText>Check it if need to log exception in system.</inlineHelpText>
        <label>Log Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrgWideEmailAddress__c</fullName>
        <label>Org Wide Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Profile_Id__c</fullName>
        <label>Profile Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <description>Community user profile needed for user creation in automated process.</description>
        <label>Profile Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Next_Suffix__c</fullName>
        <description>Extension to use for unique username generation.</description>
        <label>User Name Suffix</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Community Info</label>
</CustomObject>